api/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-api-ingress
  namespace: server-api-system
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: api.planethunter-game.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-api-service
            port:
              number: 80
